fix: return 201 on create, generate task ID, add description to update, sort tasks by due_date